Fix children overlapping html body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ html {
   scroll-padding-top: var(--nav-height);
 }
 
+body {
+  min-height: -webkit-fill-available;
+}
+
 @keyframes shift {
   0% {
     background-position: right;
